<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        style="@style/MatchWrapHorizontal">
        <TextView
            style="@style/AddItemText"
            android:text="@string/account"/>
        <EditText
            android:id="@+id/et_account"
            style="@style/AddItemEdit"
            android:hint="@string/hint_account"/>
    </LinearLayout>
    <LinearLayout
        style="@style/MatchWrapHorizontal">
        <TextView
            style="@style/AddItemText"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/et_password"
            style="@style/AddItemEdit"
            android:hint="@string/hint_password"/>
    </LinearLayout>
    <LinearLayout
        style="@style/MatchWrapHorizontal">
        <TextView
            style="@style/AddItemText"
            android:text="@string/type"/>
        <EditText
            android:id="@+id/et_type"
            style="@style/AddItemEdit"
            android:hint="@string/hint_type"/>
    </LinearLayout>
    <LinearLayout
        style="@style/MatchWrapHorizontal">
        <TextView
            style="@style/AddItemText"
            android:text="@string/des"/>
        <EditText
            android:id="@+id/et_des"
            style="@style/AddItemEdit"
            android:hint="@string/hint_des"/>
    </LinearLayout>
    <Button
        android:id="@+id/bt_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_edge"
        android:text="@string/finish"/>
</LinearLayout>