<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_edge"
    android:layout_marginRight="@dimen/margin_edge"
    android:layout_marginTop="@dimen/margin_top_bottom"
    android:background="@drawable/sel_list_item"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:id="@+id/ll_list_item_par">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/ListItemDes"
            android:text="@string/account"/>
        <TextView
            android:id="@+id/tv_account"
            style="@style/ListItem"
            android:text="@string/account"/>
        <TextView
            style="@style/ListItemDes"
            android:text="@string/password"/>
        <TextView
            android:id="@+id/tv_password"
            style="@style/ListItem"
            android:text="@string/password"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/ListItemDes"
            android:text="@string/type_short"/>
        <TextView
            android:id="@+id/tv_type"
            style="@style/ListItem"
            android:text="@string/type"/>
        <TextView
            style="@style/ListItemDes"
            android:text="@string/des"/>
        <TextView
            android:id="@+id/tv_des"
            style="@style/ListItem"
            android:text="@string/des"/>

    </LinearLayout>

</LinearLayout>